--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <section id="inicio" class="hero-section d-flex align-items-center text-center text-white">
         <div class="container">
-            <h1 class="display-4 fw-bold">Olá, eu Seja Bem-Vindo!</h1>
+            <h1 class="display-4 fw-bold">Olá, Seja Bem-Vindo!</h1>
             <p class="lead">Transformando ideias em código e soluções digitais.</p>
             <a href="#contato" class="btn btn-primary btn-lg mt-3">Entre em Contato</a>
         </div>
